# suaiCVlab1

./: .gitignore  CMakeLists.txt
img/: foreign_15.pcx  own_15.pcx
src/: main.cpp  task.cpp
src/include/: task.hpp
